# kairos

./: .gitignore  .pre-commit-config.yaml  README.md  analyze.py  make_figures.sh  model.py  pyproject.toml  run_experiment.py  summary_figure.py  train_ppo.py
config/: seriesA_acrobot.json  seriesA_cartpole.json  seriesB_acrobot.json  seriesB_cartpole.json  sweeps_constrained.json  sweeps_default.json
experiments/seriesA/: README.md
experiments/seriesA/config/: acrobot.json  cartpole.json
experiments/seriesB/: README.md
experiments/seriesB/config/: acrobot.json  cartpole.json
experiments/seriesC/: README.md
experiments/seriesC/config/: acrobot.json  cartpole.json
experiments/seriesD/: README.md
experiments/seriesD/config/: acrobot.json  cartpole.json
experiments/seriesE/: README.md
experiments/seriesE/config/: acrobot.json  cartpole.json
experiments/seriesF/: README.md
experiments/seriesF/config/: acrobot.json  cartpole.json
src/ppo_study/: __init__.py  analyze.py  plot_learning.py  run_experiment.py  summary_figure.py  train_ppo.py
