[project]
name = "ppo-study"
version = "0.1.0"
description = "PPO under real-time computational constraints"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2",
    "gymnasium>=0.29.1",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "scipy>=1.11",
]

[tool.uv]
package = false
